# kalshi-bot-v2

./: .env.backup.20260520_000002  .env.example  .gitignore  AUDIT_2026-05-28.md  BACKTEST_FINDINGS.md  CHANGELOG_LIVE_EXIT_FIX.md  CHANGELOG_OPTIMIZATION.md  CHANGELOG_PHASE10.md  CLAUDE.md  EDGE_ANALYSIS.md  HANDOFF.md  NEXT_STEPS.md  PHASE9_FINAL_CLEANUP.md  README.md  STRATEGY_RESEARCH.md  SWITCH_TO_LIVE.md  TODO.md  export_trades.py  info.md  kalshiact.csv  pyproject.toml  research_questions.md  restart.sh  run.sh  shut_off.sh  trades.db-shm  trades_summary.csv  watchdog.sh
legacy/: CHANGELOG_TELEGRAM_AND_FEEDS.md  FIRST_LAUNCH_CHECKLIST.md  PLAN.md  SPEED_PLAN.md  afterloss.md  next_steps.md  yes_side_investigation.md
scratch/: analyze_threshold.py  check_logs.py  drift_test.py  edge_existence_test.py  honest_harness.py  model_divergence.py  oos_monthly.py  persistence_and_model.py  stop_loss_counterfactual.py  test_telegram.py  validate_settlement.py
scripts/: analyze_exit_strategies.py  analyze_exit_timing.py  analyze_obi_magnitude.py  test_multi_exchange.py
src/kalshi_bot/: config.py  control_channel.py  dashboard.html  dashboard.py  explanation.md  finance.html  logging_config.py  main.py
src/kalshi_bot/alerts/: __init__.py  charts.py  control.py  discord.py  (+2 more)
src/kalshi_bot_v2.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_cached_state.py  test_dashboard_logs.py  test_executor.py  test_exits.py  test_fees.py  test_kalshi_orders.py  test_kalshi_ws.py  test_lwm.py  test_momentum.py  test_risk.py  test_sizing.py  test_window_tracker.py
(+23 files in other folders)
