[project]
name = "kalshi-bot-v2"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0,<14.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
